--- a/botaipage/package.json
+++ b/botaipage/package.json
@@ -18,6 +18,7 @@
     "openai": "^4.67.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
